--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 顶刊背后的故事
 description: 分享心理学相关领域顶刊背后的故事
 permalink: ':title/'
-baseurl: "/_site" # the subpath of your site, e.g. /blog
+baseurl: "/beyond-top-journals" # the subpath of your site, e.g. /blog
 url: "http://naoguo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #site-twitter: #if your site has a twitter account, enter it here
 
