--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social-email: naoguo@outlook.com # add your Email address
 #discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
-analytics: # Google Analytics
+analytics: G-M8VFWYK9V8 # Google Analytics
 
 # Build Settings
 markdown: kramdown
